// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts and ignores a null child 1`] = `
<div>
  <div
    class="mtfh-sidebar"
  >
    <div
      class="govukAccordion lbhAccordion"
      data-attribute="value"
      id="sidebar"
    >
      <div
        class="govukAccordionSection"
      >
        <div
          class="govukAccordionSectionHeader"
        >
          <h3
            class="lbh-heading-h5 govukAccordionSectionHeading"
          >
            <span
              class="govukAccordionSectionButton"
              id="accordion-heading-section-1"
            >
              More Details
            </span>
          </h3>
        </div>
        <div
          aria-labelledby="accordion-heading-section-1"
          class="govukAccordionSectionContent"
          id="accordion-content-section-1"
        >
          <div>
            Content
          </div>
        </div>
      </div>
      <div
        class="govukAccordionSection"
      >
        <div
          class="govukAccordionSectionHeader"
        >
          <h3
            class="lbh-heading-h5 govukAccordionSectionHeading"
          >
            <span
              class="govukAccordionSectionButton"
              id="accordion-heading-section-2"
            >
              More Details 2
            </span>
          </h3>
        </div>
        <div
          aria-labelledby="accordion-heading-section-2"
          class="govukAccordionSectionContent"
          id="accordion-content-section-2"
        >
          <div>
            Content 2
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders correctly on desktop 1`] = `
<div>
  <div
    class="mtfh-sidebar"
  >
    <div
      id="sidebar"
    >
      <div
        class="mtfh-sidebar-section"
        id="section-1"
        title="More Details"
      >
        <div>
          Content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders correctly on mobile 1`] = `
<div>
  <div
    class="mtfh-sidebar"
  >
    <div
      class="govukAccordion lbhAccordion"
      data-attribute="value"
      id="sidebar"
    >
      <div
        class="govukAccordionSection"
      >
        <div
          class="govukAccordionSectionHeader"
        >
          <h3
            class="lbh-heading-h5 govukAccordionSectionHeading"
          >
            <span
              class="govukAccordionSectionButton"
              id="accordion-heading-section-1"
            >
              More Details
            </span>
          </h3>
        </div>
        <div
          aria-labelledby="accordion-heading-section-1"
          class="govukAccordionSectionContent"
          id="accordion-content-section-1"
        >
          <div>
            Content
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
